added player class and implemented some of the update and draw functionality

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<script src="js/Keycode.js"></script>
 	<script src="js/Input.js"></script>
+	<script src="js/Player.js"></script>
 	<script src="js/Canvas.js"></script>
 	<script src="js/main.js"></script>
 	<link href="css/common.css" rel="stylesheet" type="text/css">
