added multiplayer and theme support from Justin's code, added and included platform class

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<script src="js/Keycode.js"></script>
 	<script src="js/Input.js"></script>
 	<script src="js/Player.js"></script>
+	<script src="js/Platform.js"></script>
 	<script src="js/Canvas.js"></script>
 	<script src="js/main.js"></script>
 	<link href="css/common.css" rel="stylesheet" type="text/css">
@@ -12,7 +13,10 @@
 <body style="margin: 0px; padding: 0px; overflow: hidden;">
 	<div id="container">
 		<div class="stage" >
-			<canvas id="myCanvas" class="myCanvas" width=790 height=450></canvas>
+			<canvas class="myCanvas" width=784 height=441></canvas>
+		</div>
+		<div class="stage" >
+			<canvas class="myCanvas" width=784 height=441></canvas>
 		</div>
 	</div>
 	<div id="hello" style="position:absolute; left:900" onClick="resize();" >trhtrh</div>
